--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,234 @@
-pandas
-matplotlib
-scikit-learn
-opencv-python
-ipykernel
-jupyter
+absl-py==2.1.0
+albucore==0.0.13
+albumentations==1.4.14
+annotated-types==0.7.0
+anyio==4.4.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.15.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+cachetools==5.4.0
+certifi==2024.7.4
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+coloredlogs==15.0.1
+comm==0.2.2
+contourpy==1.2.1
+cubinlinker-cu11==0.3.0.post2
+cuda-python==11.8.2
+cudf-cu11==24.6.1
+cuml-cu11==24.6.1
+cupy-cuda11x==13.2.0
+cycler==0.12.1
+Cython==3.0.10
+dask==2024.5.1
+dask-cuda==24.6.0
+dask-cudf-cu11==24.6.1
+dask-expr==1.1.1
+debugpy==1.8.2
+decorator==5.1.1
+defusedxml==0.7.1
+distributed==2024.5.1
+distributed-ucxx-cu11==0.38.0
+distro==1.9.0
+efficientnet==1.0.0
+eval_type_backport==0.2.0
+exceptiongroup==1.2.2
+executing==2.0.1
+fastjsonschema==2.20.0
+fastrlock==0.8.2
+filelock==3.15.4
+flatbuffers==1.12
+fonttools==4.53.1
+fqdn==1.5.1
+fsspec==2024.6.1
+gast==0.4.0
+gdown==5.2.0
+google-auth==2.32.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.64.1
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.0
+humanfriendly==10.0
+idna==3.7
+image-classifiers==1.0.0
+imageio==2.34.2
+imgviz==1.7.5
+importlib_metadata==8.0.0
+importlib_resources==6.4.0
+ipykernel==6.29.5
+ipython==8.18.1
+ipython-genutils==0.2.0
+ipywidgets==8.1.3
+isoduration==20.11.0
+jedi==0.19.1
+Jinja2==3.1.4
+joblib==1.4.2
+json5==0.9.25
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.3
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.11
+keras==2.9.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+keras-unet-collection==0.1.13
+kiwisolver==1.4.5
+labelme==5.5.0
+lazy_loader==0.4
+libclang==18.1.1
+libucx-cu11==1.15.0.post1
+llvmlite==0.43.0
+locket==1.0.0
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+MedPy==0.5.1
+mistune==3.0.2
+mpmath==1.3.0
+msgpack==1.0.8
+natsort==8.4.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.2.1
+notebook==5.7.4
+notebook_shim==0.2.4
+numba==0.60.0
+numpy==1.26.4
+nvidia-nccl-cu12==2.22.3
+nvtx==0.2.10
+oauthlib==3.2.2
+onnxruntime==1.18.1
+opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
+opt-einsum==3.3.0
+overrides==7.7.0
+packaging @ file:///croot/packaging_1720101850331/work
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+partd==1.4.2
+patchify==0.2.3
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.2.2
+ply==3.11
+prometheus_client==0.20.0
+prompt_toolkit==3.0.47
+protobuf==3.19.6
+psutil==6.0.0
+ptxcompiler-cu11==0.8.1.post1
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==16.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydicom==2.4.4
+Pygments==2.18.0
+pylibraft-cu11==24.6.0
+pynvml==11.4.1
+pyparsing==3.1.2
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.15.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+pytz==2024.1
+PyWavelets==1.6.0
+PyYAML==6.0.1
+pyzmq==26.0.3
+qtconsole==5.5.2
+QtPy==2.4.1
+raft-dask-cu11==24.6.0
+rapids-dask-dependency==24.6.0
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rmm-cu11==24.6.0
+rpds-py==0.19.0
+rsa==4.9
+scikit-build==0.18.0
+scikit-image==0.24.0
+scikit-learn==1.5.1
+scipy==1.13.1
+segmentation-models==1.0.1
+Send2Trash==1.8.3
+SimpleITK==2.3.1
+sip @ file:///croot/sip_1698675935381/work
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
+spyder-kernels==2.5.2
+stack-data==0.6.3
+sympy==1.13.1
+tblib==3.0.0
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.4.0
+terminado==0.18.1
+threadpoolctl==3.5.0
+tifffile==2024.7.2
+tinycss2==1.3.0
+tomli @ file:///opt/conda/conda-bld/tomli_1657175507142/work
+toolz==0.12.1
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+treelite==4.1.2
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
+tzdata==2024.1
+ucx-py-cu11==0.38.0
+ucxx-cu11==0.38.0
+uri-template==1.3.0
+urllib3==2.2.2
+wcwidth==0.2.13
+webcolors==24.6.0
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.0.3
+widgetsnbextension==4.0.11
+wrapt==1.16.0
+wurlitzer==3.1.1
+xgboost==2.1.0
+zict==3.0.0
+zipp==3.19.2
